// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`fragment.mdx format 1`] = `
====================================options=====================================
parsers: ["mdx"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<></>

<>
  <div></div>
</>

=====================================output=====================================
<></>

<><div></div></>

================================================================================
`;

exports[`short.mdx format 1`] = `
====================================options=====================================
parsers: ["mdx"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<CodeBlock language="ts">{DependencyConstraint}</CodeBlock>
<CodeBlock language="ts">{DependencyConstraint_Long_Long_Long_Long_Long_Long_Long_Long_Long_Long_Long}</CodeBlock>
<CodeBlock language="ts">DependencyConstraint</CodeBlock>
<CodeBlock language="ts">DependencyConstraint_Long_Long_Long_Long_Long_Long_Long_Long_Long_Long_Long</CodeBlock>

=====================================output=====================================
<CodeBlock language="ts">{DependencyConstraint}</CodeBlock>
<CodeBlock language="ts">
  {DependencyConstraint_Long_Long_Long_Long_Long_Long_Long_Long_Long_Long_Long}
</CodeBlock>
<CodeBlock language="ts">DependencyConstraint</CodeBlock>
<CodeBlock language="ts">DependencyConstraint_Long_Long_Long_Long_Long_Long_Long_Long_Long_Long_Long</CodeBlock>

================================================================================
`;
